feat(batch): offload cohort LTV aggregation to SQL, eliminate Java heap loading